; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_win32_window.c_acquireMonitor.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_win32_window.c_acquireMonitor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_9__ = type { %struct.TYPE_10__*, i32 }
%struct.TYPE_10__ = type { i32 }

@_glfw = common dso_local global %struct.TYPE_11__ zeroinitializer, align 4
@ES_CONTINUOUS = common dso_local global i32 0, align 4
@ES_DISPLAY_REQUIRED = common dso_local global i32 0, align 4
@SPI_GETMOUSETRAILS = common dso_local global i32 0, align 4
@SPI_SETMOUSETRAILS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_9__*)* @acquireMonitor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acquireMonitor(%struct.TYPE_9__* %0) #0 {
  %2 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %2, align 8
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @_glfw, i32 0, i32 0, i32 0), align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %18, label %5

5:                                                ; preds = %1
  %6 = load i32, i32* @ES_CONTINUOUS, align 4
  %7 = load i32, i32* @ES_DISPLAY_REQUIRED, align 4
  %8 = or i32 %6, %7
  %9 = call i32 @SetThreadExecutionState(i32 %8)
  %10 = call i64 (...) @IsWindowsXPOrGreater()
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %5
  %13 = load i32, i32* @SPI_GETMOUSETRAILS, align 4
  %14 = call i32 @SystemParametersInfo(i32 %13, i32 0, i32* getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @_glfw, i32 0, i32 0, i32 1), i32 0)
  %15 = load i32, i32* @SPI_SETMOUSETRAILS, align 4
  %16 = call i32 @SystemParametersInfo(i32 %15, i32 0, i32* null, i32 0)
  br label %17

17:                                               ; preds = %12, %5
  br label %18

18:                                               ; preds = %17, %1
  %19 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_10__*, %struct.TYPE_10__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %28, label %25

25:                                               ; preds = %18
  %26 = load i32, i32* getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @_glfw, i32 0, i32 0, i32 0), align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @_glfw, i32 0, i32 0, i32 0), align 4
  br label %28

28:                                               ; preds = %25, %18
  %29 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %29, i32 0, i32 0
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %30, align 8
  %32 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %32, i32 0, i32 1
  %34 = call i32 @_glfwSetVideoModeWin32(%struct.TYPE_10__* %31, i32* %33)
  %35 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %36 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %35, i32 0, i32 0
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** %36, align 8
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %2, align 8
  %39 = call i32 @_glfwInputMonitorWindow(%struct.TYPE_10__* %37, %struct.TYPE_9__* %38)
  ret void
}

declare dso_local i32 @SetThreadExecutionState(i32) #1

declare dso_local i64 @IsWindowsXPOrGreater(...) #1

declare dso_local i32 @SystemParametersInfo(i32, i32, i32*, i32) #1

declare dso_local i32 @_glfwSetVideoModeWin32(%struct.TYPE_10__*, i32*) #1

declare dso_local i32 @_glfwInputMonitorWindow(%struct.TYPE_10__*, %struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
